@startuml;

Account --> "1..*" Account
Account --> "1" Person
Transfer --> "2" Account
Transfer --> "0..1" Transfer

class Account {
  +id : integer
  +is_child : boolean
  +is_blocked : boolean
  +is_canceled : boolean
  ..
  +root_id : integer
  +parent_id : integer
  +owner_id : integer
  +name : string
  +amount : decimal
  ..
  +created_at : timestamp
  +updated_at : timestamp
}

class Person {
  +id : integer
  +is_juridica : boolean
  ..
  +cpf_cnpj : string
  +name : string
  +fantasy_name : string
  +born_at : timestamp
  ..
  +created_at : timestamp
  +updated_at : timestamp
}

class Transfer {
  +id : integer
  +is_child : boolean
  +is_reversal : boolean
  ..
  +reverse_id : integer
  +code : string
  +from_id : integer
  +to_id : integer
  +amount : decimal
  ..
  +created_at : timestamp
  +updated_at : timestamp
}

@enduml;
